Fixed a problem with token authenticity. I have no idea why it was an issue...

--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -7,7 +7,10 @@
       <%= f.label :player_class %>
       <%= f.text_field :player_class %>
 
+      <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+
       <%= f.submit "Create Character", class: "" %>
+
     <% end %>
   </div>
 </div>
