--- a/app/views/battle/battle.html.erb
+++ b/app/views/battle/battle.html.erb
@@ -1,4 +1,7 @@
 <div class='user-menu'>User Menu</div>
+<div class='area-info'>Area Info</div>
+
+<!-- Action Display -->
 
 <div class='action-display'>Action Display
 	<div class='turn-display'>
@@ -10,8 +13,28 @@
 	</div>
 </div>
 
-<div class='party-display'>Party</div>
+<!-- Party Display -->
+
+<div class='party-display'>
+	<h4 class='title'>Party Display</h4>
+		<div class='player-info one'></div>
+		<div class='player-info two'></div>
+		<div class='player-info three'></div>
+		<div class='player-info four'></div>
+</div>
+
+<!-- Boss Display -->
 
 <div class='boss-display'>Boss</div>
 
+<!-- Animation Canvas -->
 <canvas class='animation-canvas'></canvas>
+
+<!-- Player Objects -->
+<div class='player-one'>P1</div>
+<div class='player-two'>P2</div>
+<div class='player-three'>P3</div>
+<div class='player-four'>P4</div>
+
+<!-- Boss Display -->
+<div class='boss'>Boss</div>
