Last push for now. I need to add buttons and start writing events for menu toggles and stuff. Lots of work ahead... but it's gonna be fun.

--- a/app/views/battle/battle.html.erb
+++ b/app/views/battle/battle.html.erb
@@ -17,10 +17,10 @@
 
 <div class='party-display'>
 	<h4 class='title'>Party Display</h4>
-		<div class='player-info one'></div>
-		<div class='player-info two'></div>
-		<div class='player-info three'></div>
-		<div class='player-info four'></div>
+		<div class='player-info one'>Player 1</div>
+		<div class='player-info two'>Player 2</div>
+		<div class='player-info three'>Player 3</div>
+		<div class='player-info four'>Player 4</div>
 </div>
 
 <!-- Boss Display -->
@@ -38,3 +38,4 @@
 
 <!-- Boss Display -->
 <div class='boss'>Boss</div>
+
