--- a/app/assets/stylesheets/battle.scss
+++ b/app/assets/stylesheets/battle.scss
@@ -19,6 +19,15 @@ div{
 	font-family: Helvetica;
 }
 
+button{
+	text-align:center;
+	position: absolute;
+	top: 10%;
+	z-index: 1;
+	width: 100;
+	height: 100;
+	background-color: yellow;
+}
 // UI Elements
 .user-menu{
 	position: absolute;
@@ -45,6 +54,7 @@ div{
 .action-display{
 	position: absolute;
 
+	text-align:center;
 	z-index: 1;
 
 	left: 50%;
