--- a/app/views/battle/battle.html.erb
+++ b/app/views/battle/battle.html.erb
@@ -4,6 +4,14 @@
 <!-- Action Display -->
 
 <div class='action-display'>Action Display
+
+<button class='attack'>Attack</button>
+<button class='defend'>Defend</button>
+<button class='items'>Items</button>
+<button class='info'>Gather Info</button>
+<button class='forfeit'>Forfeit</button>
+<button class='special'>Raison d'être</button>
+
 	<div class='turn-display'>
 		<div class='slot one'>Current</div>
 		<div class='slot two'>2nd</div>
@@ -25,17 +33,26 @@
 
 <!-- Boss Display -->
 
-<div class='boss-display'>Boss</div>
+<div class='boss-display'>
+	<h4 class='title'>Boss Display</h4>
+		<div class='boss-hp'>
+			<div class='hp-value'>HP</div>
+		</div>
+		<div class='boss-info'>Boss Info Here</div>
+		<div class='boss-attacks'>Boss Attacks Here</div>
+		<div class='boss-status'>Boss Status Here</div>
+
+</div>
 
 <!-- Animation Canvas -->
 <canvas class='animation-canvas'></canvas>
 
 <!-- Player Objects -->
-<div class='player-one'>P1</div>
+<!-- <div class='player-one'>P1</div>
 <div class='player-two'>P2</div>
 <div class='player-three'>P3</div>
-<div class='player-four'>P4</div>
+<div class='player-four'>P4</div> -->
 
 <!-- Boss Display -->
-<div class='boss'>Boss</div>
+<!-- <div class='boss'>Boss</div> -->
 
