Cleaned up a few files and made sure that my Javascript is linking up to stuff correctly. Next is object creation and req/res stuff.

--- a/app/views/battle/battleui.html.erb
+++ b/app/views/battle/battleui.html.erb
@@ -1,9 +1,13 @@
 <div class='user-menu'>User Menu</div>
-<div class='area-info'>Area Info</div>
+<div class='area-info'>Area Info
+<button class='test-button'></button>
+</div>
 
 <!-- Action Display -->
 
 <div class='action-display'>Action Display
+
+<div class='text-display'></div>
 
 <button class='attack'>Attack</button>
 <button class='defend'>Defend</button>
