--- a/app/assets/stylesheets/battle.scss
+++ b/app/assets/stylesheets/battle.scss
@@ -51,11 +51,13 @@ body{
 	background-color: $ebony-clay;
 }
 
+
+
 .action-display{
 	position: absolute;
 
 	text-align:center;
-	z-index: 1;
+	z-index: 2;
 
 	box-sizing:border-box;
 	    -moz-box-sizing:border-box;
@@ -72,6 +74,16 @@ body{
 	height:30%;
 
 	background: url(http://www.yaharapridefarms.org/wp-content/uploads/2013/06/HD-wallpaper-Otife-Dark-black-plain-design-background.jpg);
+
+	.text-display{
+		position: absolute;
+
+		height: 20%;
+		width: 100%;
+
+		top: -25%;
+		background-color: red;
+	}
 
 	.attack{
 		text-shadow: 2px 2px 5px black;
