Added some actual view rendering logic. Yay for progress!!

--- a/app/assets/stylesheets/battle.scss
+++ b/app/assets/stylesheets/battle.scss
@@ -273,18 +273,18 @@ body{
 		border-right: 1px solid black;
 	}
 
-	.one{
+	.pone{
 		top: 15%;
 		background-color: rgba(244, 208, 63, 0.5);
 	}
-	.two{
+	.ptwo{
 		top: 35%;
 	}
-	.three{
+	.pthree{
 		top: 55%;
 		background-color: rgba(248, 148, 6, 0.5)
 	}
-	.four{
+	.pfour{
 		top: 75%;
 	}
 }
