--- a/app/views/battle/battleui.html.erb
+++ b/app/views/battle/battleui.html.erb
@@ -29,10 +29,10 @@
 
 <div class='party-display'>
 	<h4 class='title'>Party Display</h4>
-		<div class='player-info one'>Player 1</div>
-		<div class='player-info two'>Player 2</div>
-		<div class='player-info three'>Player 3</div>
-		<div class='player-info four'>Player 4</div>
+		<div class='player-info pone'>Player 1</div>
+		<div class='player-info ptwo'>Player 2</div>
+		<div class='player-info pthree'>Player 3</div>
+		<div class='player-info pfour'>Player 4</div>
 </div>
 
 <!-- Boss Display -->
